# learning-everything

./: .gitignore  CLAUDE.md  README.md  learning-everything.sln
.agent/rules/: capstone-sprint.md  learning-report.md  lesson-management.md  topic-progress.md
.agent/workflows/: commit-lesson-work.md  lesson-complete.md  ship-it.md  teacher-lesson-end.md  teacher-lesson-start.md
.claude/commands/: archive.md  issue.md  next-lesson.md  report.md  reset.md  resolve-pr.md  ship.md  sprint.md  status.md  teach.md
.claude/templates/: learning-issue.md  learning-report.md  topic-progress-readme.md
.github/: pull_request_template.md
.github/agents/: github-liaison.agent.md  teacher.agent.md
.github/gh-docs/: README.md  custom-agents.md  custom-instructions.md  extension-development.md  mcp-servers.md  prompt-files.md
.github/prompts/: archive-lesson.prompt.md  capstone-sprint.prompt.md  commit-and-pr.prompt.md  (+4 more)
homemade-podcast-generator/: README.md  main.py  pyproject.toml
homemade-podcast-generator/core/1-context-ingestion/: test-context.py
homemade-podcast-generator/core/huggingface-stuff/: MODEL_DOWNLOAD_GUIDE.md  TTS_MODEL_DISCOVERY.md  debug-models.py  download-and-prep-model.py  list-models.py
shade-stuff/: data_analysis.py  immunization_subnational_zaf.csv  pyproject.toml  test.ipynb
shade-stuff/zaf_admin_boundaries.shp/: zaf_admin0.dbf  zaf_admin0.shx  zaf_admin1.dbf  zaf_admin1.shx  zaf_admin2.dbf  zaf_admin2.shx  zaf_admin3.dbf  zaf_admin3.shx  zaf_admin4.shx  zaf_adminlines.shx  zaf_adminpoints.shp  zaf_adminpoints.shx
training/: today.md
(+23 files in other folders)
