[project]
name = "homemade-podcast-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.8.4",
    "huggingface-hub>=1.8.0",
    "tokenizers>=0.22.2",
    "torch>=2.11.0",
    "transformers>=5.3.0",
]
